--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">Wicil</a>
+        <a class="navbar-brand fs-4 fw-bold text-light" href="#">Wildan</a>
         <button
-          class="navbar-toggler"
+          class="navbar-toggler bg-light"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarNav"
@@ -29,23 +29,40 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon bg-light"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active text-light" aria-current="page" href="#"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link text-light" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link text-light" href="#">Contact</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
+    <section id="home" class="home container">
+      <div class="row d-flex align-items-center">
+        <div class="col-8">
+          <h3 class="fw-semibold">Hi! I'am</h3>
+          <h1 class="fw-bold">Wildan</h1>
+          <p>I am Software Engineer based in Indonesia</p>
+          <a class="btn" href="image/Screenshot 2025-05-25 092703.png" download
+            >Resume</a
+          >
+        </div>
+        <div class="col-4">
+          <img src="image/propil.jpg" alt="Potret" />
+        </div>
+      </div>
+    </section>
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
