--- a/index.html
+++ b/index.html
@@ -54,16 +54,88 @@
           <h3 class="fw-semibold">Hi! I'am</h3>
           <h1 class="fw-bold">Wildan</h1>
           <p>I am Software Engineer based in Indonesia</p>
-          <a class="btn" href="image/Screenshot 2025-05-25 092703.png" download
+          <a
+            class="btn button"
+            href="image/Screenshot 2025-05-25 092703.svg"
+            download
             >Resume</a
           >
         </div>
-        <div class="col-4">
-          <img src="image/propil.jpg" alt="Potret" />
+        <div class="col-3">
+          <img class="propil" src="image/propil.jpg" alt="Potret" />
+        </div>
+      </div>
+      <div class="arrow w-100 d-flex align-items-center flex-column mt-5">
+        <a
+          class="fw-semibold align-items-center text-decoration-none text-dark"
+          href="#about"
+          >More Info</a
+        >
+        <img id="arrow" src="image/arrow-down-sign-to-navigate.png" alt="" />
+      </div>
+    </section>
+    <section id="about" class="about container">
+      <p>
+        I’m an aspiring software engineer currently starting my journey in the
+        world of development. Passionate about technology, I’m learning to build
+        practical solutions through code. With every project, I aim to grow my
+        skills, explore new tools, and contribute meaningfully. This portfolio
+        reflects my first steps and future ambitions.
+      </p>
+      <div class="about-exp">
+        <div class="about-exp-item">
+          <div class="about-exp-item-header">
+            <div>
+              <h5>Software Engineer</h5>
+              <p>Coding Studio (2025-Now)</p>
+            </div>
+            <button class="btn button" onclick="toggleDetail(event)">
+              More Info
+            </button>
+          </div>
+          <p class="about-exp-item-detail">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus
+            illum veritatis dolorem sapiente harum voluptas rerum numquam,
+            deleniti, sunt delectus possimus itaque non blanditiis culpa minus
+            vero soluta ipsum nemo!
+          </p>
+        </div>
+        <div class="about-exp-item">
+          <div class="about-exp-item-header">
+            <div>
+              <h5>Software Engineer</h5>
+              <p>Coding Studio (2025-Now)</p>
+            </div>
+            <button class="btn button" onclick="toggleDetail(event)">
+              More Info
+            </button>
+          </div>
+          <p class="about-exp-item-detail">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus
+            illum veritatis dolorem sapiente harum voluptas rerum numquam,
+            deleniti, sunt delectus possimus itaque non blanditiis culpa minus
+            vero soluta ipsum nemo!
+          </p>
+        </div>
+        <div class="about-exp-item">
+          <div class="about-exp-item-header">
+            <div>
+              <h5>Software Engineer</h5>
+              <p>Coding Studio (2025-Now)</p>
+            </div>
+            <button class="btn button" onclick="toggleDetail(event)">
+              More Info
+            </button>
+          </div>
+          <p class="about-exp-item-detail">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus
+            illum veritatis dolorem sapiente harum voluptas rerum numquam,
+            deleniti, sunt delectus possimus itaque non blanditiis culpa minus
+            vero soluta ipsum nemo!
+          </p>
         </div>
       </div>
     </section>
-
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -79,6 +151,6 @@
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
       crossorigin="anonymous"
     ></script>
-    <link href="main.js" />
+    <script src="main.js"></script>
   </body>
 </html>
