--- a/index.html
+++ b/index.html
@@ -94,13 +94,26 @@
             </button>
           </div>
           <p class="about-exp-item-detail">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus
-            illum veritatis dolorem sapiente harum voluptas rerum numquam,
-            deleniti, sunt delectus possimus itaque non blanditiis culpa minus
-            vero soluta ipsum nemo!
+            Hii! I’m a newbie software engineer tryna figure out this whole coding life 👩‍💻✨ Just started learning how to build stuff from scratch, and it’s been a wild but fun ride. I recently joined a coding studio to learn faster, collab with cool people, and glow up my dev skills. Stay tuned! 🚀
+
+
           </p>
         </div>
         <div class="about-exp-item">
+          <div class="about-exp-item-header">
+            <div>
+              <h5>Trader Newbie</h5>
+              <p>RocaTrader (2025-Now)</p>
+            </div>
+            <button class="btn button" onclick="toggleDetail(event)">
+              More Info
+            </button>
+          </div>
+          <p class="about-exp-item-detail">
+            Yo! I’m a total newbie in crypto trading, just starting to learn the game 🧠📈 Got into it out of curiosity, now I’m hooked on charts, candles, DCA-ing my fav coins, and testing out futures (yes, with baby steps lol). Just joined Rocatrader to level up with real traders. Let’s gooo 🚀💸
+          </p>
+        </div>
+        <!-- <div class="about-exp-item">
           <div class="about-exp-item-header">
             <div>
               <h5>Software Engineer</h5>
@@ -117,22 +130,23 @@
             vero soluta ipsum nemo!
           </p>
         </div>
-        <div class="about-exp-item">
-          <div class="about-exp-item-header">
-            <div>
-              <h5>Software Engineer</h5>
-              <p>Coding Studio (2025-Now)</p>
-            </div>
-            <button class="btn button" onclick="toggleDetail(event)">
-              More Info
-            </button>
-          </div>
-          <p class="about-exp-item-detail">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus
-            illum veritatis dolorem sapiente harum voluptas rerum numquam,
-            deleniti, sunt delectus possimus itaque non blanditiis culpa minus
-            vero soluta ipsum nemo!
+      </div> -->
+    </section>
+    <section id="work" class="work container">
+      <div class="row d-flex align-items-center gap-5">
+        <div class="col">
+          <p>
+            So far, I’ve worked on small personal projects to sharpen my skills,
+            including simple websites, chart analysis and technical fundamentals, and basic JavaScript apps. Each project
+            has helped me understand code better and gain confidence. While I’m
+            still learning, I’m proud of every step I’ve taken and excited for
+            what’s next.
           </p>
+        </div>
+        <div class="col work-img">
+          <img src="image/Screenshot 2025-05-25 092703.png" alt="work 1" id="work-1">
+          <img src="image/Screenshot 2025-05-25 132011.png" alt="work 2" id="work-2">
+          <img src="image/Screenshot 2025-05-26 222618.png" alt="work 3" id="work-3">
         </div>
       </div>
     </section>
