--- a/index.html
+++ b/index.html
@@ -144,9 +144,51 @@
           </p>
         </div>
         <div class="col work-img">
-          <img src="image/Screenshot 2025-05-25 092703.png" alt="work 1" id="work-1">
-          <img src="image/Screenshot 2025-05-25 132011.png" alt="work 2" id="work-2">
-          <img src="image/Screenshot 2025-05-26 222618.png" alt="work 3" id="work-3">
+          <div id="work-1" class="work-img-item">
+            <img src="image/Screenshot 2025-05-25 092703.png" alt="work 1">
+          </div>
+          <div id="work-2" class="work-img-item">
+            <img src="image/Screenshot 2025-05-25 132011.png" alt="work 2">
+          </div>
+          <div id="work-3" class="work-img-item">
+             <img src="image/Screenshot 2025-05-26 222618.png" alt="work 3">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="contact" class="contact container">
+      <div class="row d-flex align-items-center gap-5">
+        <div class="col">
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat iusto neque enim quidem alias quam impedit eos consectetur, ullam quae amet quaerat deleniti consequatur provident facere cupiditate! Autem consectetur quis odio, quia delectus accusantium cupiditate voluptatem placeat odit, animi labore velit laborum quae quasi dolores sequi ad? Illum, maxime qui?</p>
+          <div class="row">
+            <div class="col">
+              <img src="image/instagram.png" alt="instagram icon">
+              <p>@wxndn__</p>
+            </div>
+            <div class="col" >
+              <img src="image/twitter.png" alt="x icon">
+              <p>@kememuab__</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <form class="contact-form"> 
+            <div class="mb-3">
+              <label for="inp_email" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="inp_email" aria-describedby="emailHelp"> 
+            </div>
+            <div class="mb-3">
+              <label for="inp_subject" class="form-label">Subject</label>
+              <input type="text" class="form-control" id="inp_subject">
+            </div>
+            <div class="mb-3">
+              <label for="inp_message" class="form-label">Message</label>
+              <input type="text" class="form-control" id="inp_message">
+            </div>
+            <div class="d-flex justify-content-center mt-5">
+              <button type="submit" class="btn button">Submit</button> 
+            </div>
+          </form>
         </div>
       </div>
     </section>
