fix: updated manually after prettier erro

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
               <a class="nav-link text-light" href="#about">About</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link text-light" href="#work">Work</a>
+            </li>
+             <li class="nav-item">
               <a class="nav-link text-light" href="#contact">Contact</a>
             </li>
           </ul>
@@ -49,14 +52,14 @@
       </div>
     </nav>
     <section id="home" class="home container">
-      <div class="row d-flex align-items-center">
-        <div class="col-8">
+      <div class="row d-flex align-items-center flex-md-row flex-column-reverse">
+        <div class="col-12 col-md-8">
           <h3 class="fw-semibold">Hi! I'am</h3>
           <h1 class="fw-bold">Wildan</h1>
           <p>I am Software Engineer based in Indonesia</p>
           <a class="btn button" href="image/Screenshot 2025-05-25 092703.svg" download>Resume</a>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-md-3 d-flex justify-content-md-end justify-content-center">
           <img class="propil" src="image/propil.jpg" alt="Potret" />
         </div>
       </div>
@@ -125,7 +128,7 @@
     </section>
     <section id="work" class="work container">
       <div class="row d-flex align-items-center gap-5">
-        <div class="col">
+        <div class="col-12 col-md-6">
           <p>
             So far, I’ve worked on small personal projects to sharpen my skills,
             including simple websites, chart analysis and technical fundamentals, and basic JavaScript apps. Each project
@@ -134,7 +137,7 @@
             what’s next.
           </p>
         </div>
-        <div class="col work-img">
+        <div class="col-12 col-md-5  work-img">
           <div id="work-1" class="work-img-item">
             <img src="image/Screenshot 2025-05-25 092703.png" alt="work 1">
           </div>
@@ -148,16 +151,16 @@
       </div>
     </section>
     <section id="contact" class="contact container">
-      <div class="d-flex align-items-center gap-5">
+      <div class=" row d-flex align-items-center gap-5">
         <div class="col-12 col-lg-6">
           <p>Got a question, project idea, or just wanna vibe and talk tech or crypto? Don’t be shy — I’d love to connect! Whether it’s about coding, trading, or random geeky stuff, I’m all ears. Slide into my inbox or drop a DM anytime — let’s make something cool happen 🚀💻</p>
-          <div class="row">
-            <div class='d-flex align-items-center'>
-              <img class="w-25" src="image/instagram.png" alt="instagram icon">
+          <div class='d-flex align-items-center gap-5'>
+            <div class="d-flex align-items-center">
+              <img src="image/instagram.png" alt="instagram icon">
               <p class="mb-0 ms-2">@wxndn__</p>
             </div>
             <div class='d-flex align-items-center'>
-              <img class="w-25" src="image/twitter.png" alt="x icon">
+              <img src="image/twitter.png" alt="x icon">
               <p class="mb-0 ms-2">@kememuab__</p>
             </div>
           </div>  
