--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active text-light" aria-current="page" href="#home"
+              <a
+                class="nav-link active text-light"
+                aria-current="page"
+                href="#home"
                 >Home</a
               >
             </li>
@@ -44,7 +47,7 @@
             <li class="nav-item">
               <a class="nav-link text-light" href="#work">Work</a>
             </li>
-             <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link text-light" href="#contact">Contact</a>
             </li>
           </ul>
@@ -52,20 +55,36 @@
       </div>
     </nav>
     <section id="home" class="home container">
-      <div class="row d-flex align-items-center flex-md-row flex-column-reverse">
+      <div
+        class="row d-flex align-items-center flex-md-row flex-column-reverse"
+      >
         <div class="col-12 col-md-8">
           <h3 class="fw-semibold">Hi! I'am</h3>
           <h1 class="fw-bold">Wildan</h1>
           <p>I am Software Engineer based in Indonesia</p>
-          <a class="btn button" href="image/Screenshot 2025-05-25 092703.svg" download>Resume</a>
+          <a
+            class="btn button"
+            href="image/Screenshot 2025-05-25 092703.svg"
+            download
+            >Resume</a
+          >
         </div>
-        <div class="col-12 col-md-3 d-flex justify-content-md-end justify-content-center">
+        <div
+          class="col-12 col-md-3 d-flex justify-content-md-end justify-content-center"
+        >
           <img class="propil" src="image/propil.jpg" alt="Potret" />
         </div>
       </div>
-      <a  href="#about" class="text-decoration-none arrow w-100 d-flex align-items-center flex-column mt-5">
+      <a
+        href="#about"
+        class="text-decoration-none arrow w-100 d-flex align-items-center flex-column mt-5"
+      >
         <div class="fw-semibold align-items-center text-dark">More Info</div>
-        <img id="arrow" src="image/arrow-down-sign-to-navigate.png" alt="arrow icon">
+        <img
+          id="arrow"
+          src="image/arrow-down-sign-to-navigate.png"
+          alt="arrow icon"
+        />
       </a>
     </section>
     <section id="about" class="about container">
@@ -88,9 +107,11 @@
             </button>
           </div>
           <p class="about-exp-item-detail">
-            Hii! I’m a newbie software engineer tryna figure out this whole coding life 👩‍💻✨ Just started learning how to build stuff from scratch, and it’s been a wild but fun ride. I recently joined a coding studio to learn faster, collab with cool people, and glow up my dev skills. Stay tuned! 🚀
-
-
+            Hii! I’m a newbie software engineer tryna figure out this whole
+            coding life 👩‍💻✨ Just started learning how to build stuff from
+            scratch, and it’s been a wild but fun ride. I recently joined a
+            coding studio to learn faster, collab with cool people, and glow up
+            my dev skills. Stay tuned! 🚀
           </p>
         </div>
         <div class="about-exp-item">
@@ -104,88 +125,69 @@
             </button>
           </div>
           <p class="about-exp-item-detail">
-            Yo! I’m a total newbie in crypto trading, just starting to learn the game 🧠📈 Got into it out of curiosity, now I’m hooked on charts, candles, DCA-ing my fav coins, and testing out futures (yes, with baby steps lol). Just joined Rocatrader to level up with real traders. Let’s gooo 🚀💸
+            Yo! I’m a total newbie in crypto trading, just starting to learn the
+            game 🧠📈 Got into it out of curiosity, now I’m hooked on charts,
+            candles, DCA-ing my fav coins, and testing out futures (yes, with
+            baby steps lol). Just joined Rocatrader to level up with real
+            traders. Let’s gooo 🚀💸
           </p>
         </div>
-        <!-- <div class="about-exp-item">
-          <div class="about-exp-item-header">
-            <div>
-              <h5>Software Engineer</h5>
-              <p>Coding Studio (2025-Now)</p>
-            </div>
-            <button class="btn button" onclick="toggleDetail(event)">
-              More Info
-            </button>
-          </div>
-          <p class="about-exp-item-detail">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus
-            illum veritatis dolorem sapiente harum voluptas rerum numquam,
-            deleniti, sunt delectus possimus itaque non blanditiis culpa minus
-            vero soluta ipsum nemo!
-          </p>
-        </div>
-      </div> -->
+      </div>
     </section>
     <section id="work" class="work container">
       <div class="row d-flex align-items-center gap-5">
         <div class="col-12 col-md-6">
           <p>
             So far, I’ve worked on small personal projects to sharpen my skills,
-            including simple websites, chart analysis and technical fundamentals, and basic JavaScript apps. Each project
-            has helped me understand code better and gain confidence. While I’m
-            still learning, I’m proud of every step I’ve taken and excited for
-            what’s next.
+            including simple websites, chart analysis and technical
+            fundamentals, and basic JavaScript apps. Each project has helped me
+            understand code better and gain confidence. While I’m still
+            learning, I’m proud of every step I’ve taken and excited for what’s
+            next.
           </p>
         </div>
-        <div class="col-12 col-md-5  work-img">
+        <div class="col-12 col-md-5 work-img">
           <div id="work-1" class="work-img-item">
-            <img src="image/Screenshot 2025-05-25 092703.png" alt="work 1">
+            <img src="image/Screenshot 2025-05-25 092703.png" alt="work 1" />
           </div>
           <div id="work-2" class="work-img-item">
-            <img src="image/Screenshot 2025-05-25 132011.png" alt="work 2">
+            <img src="image/Screenshot 2025-05-25 132011.png" alt="work 2" />
           </div>
           <div id="work-3" class="work-img-item">
-             <img src="image/Screenshot 2025-05-26 222618.png" alt="work 3">
+            <img src="image/Screenshot 2025-05-26 222618.png" alt="work 3" />
           </div>
         </div>
       </div>
     </section>
     <section id="contact" class="contact container">
-      <div class=" row d-flex align-items-center gap-5">
-        <div class="col-12 col-lg-6">
-          <p>Got a question, project idea, or just wanna vibe and talk tech or crypto? Don’t be shy — I’d love to connect! Whether it’s about coding, trading, or random geeky stuff, I’m all ears. Slide into my inbox or drop a DM anytime — let’s make something cool happen 🚀💻</p>
-          <div class='d-flex align-items-center gap-5'>
+      <div class="row d-flex align-items-center gap-5">
+        <div>
+          <p>
+            Got a question, project idea, or just wanna vibe and talk tech or
+            crypto? Don’t be shy — I’d love to connect! Whether it’s about
+            coding, trading, or random geeky stuff, I’m all ears. Slide into my
+            inbox or drop a DM anytime — let’s make something cool happen 🚀💻
+          </p>
+          <div class="d-flex align-items-center justify-content-center gap-5">
             <div class="d-flex align-items-center">
-              <img src="image/instagram.png" alt="instagram icon">
+              <img src="image/instagram.png" alt="instagram icon" />
               <p class="mb-0 ms-2">@wxndn__</p>
             </div>
-            <div class='d-flex align-items-center'>
-              <img src="image/twitter.png" alt="x icon">
+            <div class="d-flex align-items-center">
+              <img src="image/twitter.png" alt="x icon" />
               <p class="mb-0 ms-2">@kememuab__</p>
             </div>
-          </div>  
-        </div>
-        <div class="col-12 col-lg-5">
-          <form class="contact-form"  onsubmit="onFormSubmit(event)"> 
-            <div class="mb-3">
-              <label for="inp_email" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="inp_email" aria-describedby="emailHelp" required> 
-            </div>
-            <div class="mb-3">
-              <label for="inp_subject" class="form-label">Subject</label>
-              <input type="text" class="form-control" id="inp_subject" required>
-            </div>
-            <div class="mb-3">
-              <label for="inp_message" class="form-label">Message</label>
-              <input type="text" class="form-control" id="inp_message" required>
-            </div>
-            <div class="d-flex justify-content-center mt-5">
-              <button type="submit" class="btn button">Submit</button> 
-            </div>
-          </form>
+          </div>
         </div>
       </div>
     </section>
+
+    <footer>
+      <div class="container text-center">
+        <p class="mb-0">© 2025 Wildan. All rights reserved.</p>
+      </div>
+    </footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
