--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     />
   </head>
   <body>
+    <!-- navbar -->
     <nav class="navbar navbar-expand-lg bg-dark">
       <div class="container">
         <a class="navbar-brand fs-4 fw-bold text-light" href="#">Wildan</a>
@@ -54,6 +55,8 @@
         </div>
       </div>
     </nav>
+
+    <!-- home -->
     <section id="home" class="home container">
       <div
         class="row d-flex align-items-center flex-md-row flex-column-reverse"
@@ -62,12 +65,6 @@
           <h3 class="fw-semibold">Hi! I'am</h3>
           <h1 class="fw-bold">Wildan</h1>
           <p>I am Software Engineer based in Indonesia</p>
-          <a
-            class="btn button"
-            href="image/Screenshot 2025-05-25 092703.svg"
-            download
-            >Resume</a
-          >
         </div>
         <div
           class="col-12 col-md-3 d-flex justify-content-md-end justify-content-center"
@@ -87,6 +84,8 @@
         />
       </a>
     </section>
+
+    <!-- about -->
     <section id="about" class="about container">
       <p>
         I’m an aspiring software engineer currently starting my journey in the
@@ -134,6 +133,8 @@
         </div>
       </div>
     </section>
+
+    <!-- work -->
     <section id="work" class="work container">
       <div class="row d-flex align-items-center gap-5">
         <div class="col-12 col-md-6">
@@ -143,8 +144,15 @@
             fundamentals, and basic JavaScript apps. Each project has helped me
             understand code better and gain confidence. While I’m still
             learning, I’m proud of every step I’ve taken and excited for what’s
-            next.
+            next. Here are the projects I've created:
           </p>
+
+          <a
+            class="btn button"
+            href="https://revou-fundamental-course.github.io/16-jun-25-Wcilll/"
+            download
+            >Web Matematika</a
+          >
         </div>
         <div class="col-12 col-md-5 work-img">
           <div id="work-1" class="work-img-item">
@@ -159,6 +167,8 @@
         </div>
       </div>
     </section>
+
+    <!-- contact -->
     <section id="contact" class="contact container">
       <div class="row d-flex align-items-center gap-5">
         <div>
@@ -182,6 +192,7 @@
       </div>
     </section>
 
+    <!-- footer -->
     <footer>
       <div class="container text-center">
         <p class="mb-0">© 2025 Wildan. All rights reserved.</p>
