--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg bg-dark">
       <div class="container">
-        <a class="navbar-brand fs-4 fw-bold text-light" href="#">Wildan</a>
+        <!-- <a class="navbar-brand fs-4 fw-bold text-light" href="#">Wildan</a> -->
+        <img
+          class="logo navbar-brand fs-4 fw-bold text-light"
+          src="image/logo.jpg"
+          alt="Gambar Logo"
+        />
         <button
           class="navbar-toggler bg-light"
           type="button"
